--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,10 +20,24 @@ android {
     }
 }
 
+ext {
+    supportLibraryVersion = '26.1.0'
+    gsonVersion = '2.8.2'
+    volleyVersion = '1.0.0'
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    // Android Support
+    implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
+
+    // Volley (networking library)
+    implementation "com.android.volley:volley:$volleyVersion"
+
+    // Gson (parsing Library)
+    compile "com.google.code.gson:gson:$gsonVersion"
 }
