--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
     package="com.mfekim.testallo"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!-- Permissions -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <!-- Application -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
