Create the mechanism of the demand detail screen (empty UI)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,12 @@
 
         <!-- Activity Demand List -->
         <activity
-            android:name=".demand.AVDemandListActivity">
+            android:name=".demand.list.AVDemandListActivity">
+        </activity>
+
+        <!-- Activity Demand Detail -->
+        <activity
+            android:name=".demand.detail.AVDemandDetailActivity">
         </activity>
 
     </application>
