--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ ext {
     volleyVersion = '1.1.0'
     picassoVersion = '2.5.2'
     picasso2Okhttp3DownloaderVersion = '1.1.0'
+    playServiceVersion = '11.6.2'
 }
 
 dependencies {
@@ -42,9 +43,12 @@ dependencies {
     implementation "com.android.volley:volley:$volleyVersion"
 
     // Gson (parsing Library)
-    compile "com.google.code.gson:gson:$gsonVersion"
+    implementation "com.google.code.gson:gson:$gsonVersion"
 
     // Picasso (image library)
-    compile "com.squareup.picasso:picasso:$picassoVersion"
-    compile "com.jakewharton.picasso:picasso2-okhttp3-downloader:$picasso2Okhttp3DownloaderVersion"
+    implementation "com.squareup.picasso:picasso:$picassoVersion"
+    implementation "com.jakewharton.picasso:picasso2-okhttp3-downloader:$picasso2Okhttp3DownloaderVersion"
+
+    // Google Play Services
+    implementation "com.google.android.gms:play-services-location:$playServiceVersion"
 }
