Show the map on the demand detail screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
 
     // Google Play Services
     implementation "com.google.android.gms:play-services-location:$playServiceVersion"
+    implementation "com.google.android.gms:play-services-maps:$playServiceVersion"
 }
